[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entity/EntityBase.gd" type="Script" id=1]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/EntityHealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sound/death.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 12.0

[node name="EntityBase" type="KinematicBody2D"]
z_index = 3
z_as_relative = false
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 13 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]

[node name="Hitbox" parent="." instance=ExtResource( 3 )]

[node name="EntityHealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -11.0
margin_right = 29.0

[node name="SoundHP" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="died" from="." to="." method="_on_EntityBase_died"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
